# r3d

./: Cargo.toml
codegen/: Cargo.toml
codegen/src/: handle.rs  lib.rs
codegen/src/handles/: handle_mut.rs
codegen/src/lua/: lua_enum.rs  lua_error.rs  lua_user_data.rs  lua_user_data_arc.rs  lua_user_data_method.rs  mod.rs
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/gfx/: mod.rs
enter-core-lib/: Cargo.toml
enter-core-lib/src/engine/: mod.rs  vsync.rs
enter-core-lib/src/engine/ecs_system/: render.rs  update_camera_transform_buffer.rs
enter-core-lib/src/engine/gfx/: camera.rs  color.rs  gfx_context.rs  gpu_resource_manager.rs  mod.rs  render_mgr.rs  screen_mgr.rs  sprite.rs  sprite_texel_mapping.rs  texture.rs
enter-core-lib/src/engine/gfx/material/: bind_group_layout_cache.rs  material.rs  mod.rs  pipeline_cache.rs  pipeline_layout_cache.rs  shader.rs  shader_layout.rs  shader_reflection.rs
enter-core-lib/src/engine/gfx/renderer/: device_buffer.rs  frame_buffer_allocator.rs  generic_buffer_pool.rs  mod.rs  pipeline_provider.rs  renderer.rs
enter-core-lib/src/engine/gfx/renderer/renderer_impls/: mesh_renderer.rs  mod.rs
enter-core-lib/src/engine/math/: mat4.rs  quat.rs  vec2.rs
enter-core-lib/src/engine/object/: mod.rs  object_hierarchy.rs  object_id.rs
enter-core-lib/src/engine/scripting/: lua_api_table.rs
enter-core-lib/src/engine/scripting/conversion/: user_data.rs  value.rs
enter-core-lib/src/engine/transform/: transform.rs
enter-core-lib/src/engine/world/: mod.rs
enter-core-lib/src/game/map/: mod.rs
r3d-asset/: Cargo.toml
r3d-asset-loader/: Cargo.toml
r3d-asset-loader/src/: asset_database.rs  asset_loader.rs  asset_loaders.rs  lib.rs
r3d-asset-loader/src/asset_loaders/: raw_file_asset_loader.rs  runtime_asset_loader.rs
r3d-asset-pipeline/: Cargo.toml
r3d-asset-pipeline/src/: lib.rs  metadata.rs  pipeline.rs  pipeline_gfx_bridge.rs  pipelines.rs
r3d-asset-pipeline/src/pipelines/: font.rs  material.rs  model.rs  shader.rs  texture.rs
r3d-asset/src/: asset.rs  asset_deps_provider.rs  asset_key.rs  asset_source.rs  assets.rs  gfx_bridge.rs  lib.rs
r3d-asset/src/assets/: font_asset.rs  material_asset.rs  mesh_asset.rs  model_asset.rs  shader_asset.rs  sprite_asset.rs  texture_asset.rs
r3d-codegen/src/: lib.rs
r3d-codegen/src/components/: component.rs
r3d-codegen/src/handles/: handle.rs  handle_mut.rs  mod.rs
r3d-codegen/src/lua/: lua_enum.rs  lua_user_data.rs  lua_user_data_arc.rs  lua_user_data_method.rs
r3d-editor/: Cargo.toml
r3d-editor/assets/fonts/: NotoSans-Regular.ttf.toml
r3d-editor/assets/shaders/: glyph.wgsl  sprite.wgsl
r3d-editor/assets/sprites/: Rectangle 1.png.toml
r3d-editor/src/: assets.rs  main.rs
r3d-logging/: Cargo.toml
r3d-logging/src/: lib.rs  transports.rs
r3d-logging/src/transports/: console_transport.rs  file_transport.rs  filter_transport.rs
r3d-pmx/: Cargo.toml  README.md
r3d-pmx/src/: cursor.rs  lib.rs  parse.rs  pmx_bone.rs  pmx_display.rs  pmx_header.rs  pmx_joint.rs  pmx_material.rs  pmx_morph.rs  pmx_primitives.rs  pmx_rigidbody.rs  pmx_surface.rs  pmx_texture.rs  pmx_vertex.rs  primitives.rs
src/: lib.rs  main.rs  vsync.rs
src/asset/: gfx_bridge_impl.rs  mod.rs  pipeline_gfx_bridge_impl.rs
src/ecs_system/: make_ui_scaler_dirty.rs  mod.rs  render.rs  update_camera_transform_buffer.rs  update_ui_element.rs  update_ui_raycast_grid.rs  update_ui_scaler.rs
src/event/: event_bus.rs  event_dispatcher.rs  event_handler.rs  mod.rs
src/event/event_types/: mod.rs
src/gfx/: built_in_shader_manager.rs  camera.rs  color.rs  depth_stencil.rs  font.rs  mesh.rs  mod.rs  nine_patch.rs  render_mgr.rs  sprite.rs  texture.rs
src/gfx/glyph/: glyph_layout.rs  glyph_layout_config.rs  glyph_manager.rs  glyph_sprite.rs  glyph_texture.rs  mod.rs  sdf_gen.rs
src/gfx/material/: bind_group_layout_cache.rs  mod.rs  pipeline_cache.rs  pipeline_layout_cache.rs  shader.rs
src/gfx/renderer/: frame_buffer_allocator.rs  generic_buffer_pool.rs  host_buffer.rs  mod.rs  pipeline_provider.rs  renderer.rs
src/gfx/renderer/renderer_impls/: mesh_renderer.rs  mod.rs  ui_element_renderer.rs  ui_text_renderer.rs
src/input/: input_device.rs  mod.rs  raw_input.rs  raw_input_event.rs  raw_input_event_dispatcher.rs
src/input/input_devices/: keyboard.rs  mod.rs  mouse.rs
src/math/: mod.rs  quat.rs  vec3.rs  vec4.rs
src/object/: component_storage.rs  handle.rs  mod.rs  object_component.rs  object_handle.rs  object_hierarchy.rs  object_id_allocator.rs  object_manager.rs  object_name_registry.rs  object_storage.rs
src/object_event/: mod.rs  object_event_bus.rs  object_event_dispatcher.rs  object_event_handler.rs
src/object_event/object_event_types/: mod.rs
src/scripting/: lua_user_data.rs  mod.rs
src/scripting/conversion/: method.rs  mod.rs
src/time/: mod.rs
src/transform/: transform.rs
src/ui/: mod.rs  ui_element.rs  ui_event_manager.rs  ui_raycast_manager.rs  ui_scaler.rs  ui_size.rs
src/util/: mod.rs  slot_map.rs
src/world/: mod.rs
