[package]
name = "enter-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "./engine" }
pollster = { version = "0.3" }
thiserror = { version = "1" }

[workspace]
members = [
  "./engine"
]
