[package]
name = "enter-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enter-core-lib = { path = "./enter-core-lib" }
pollster = { version = "0.3" }
thiserror = { version = "1" }

[workspace]
members = [
  "./codegen",
  "./enter-core-lib",
]
