[package]
name = "r3d"
version = "0.1.0"
edition = "2021"
authors = ["AcrylicShrimp <led789zxpp@naver.com>"]
description = "A 3D game engine."
repository = "https://github.com/AcrylicShrimp/r3d"
keywords = ["game-engine", "gamedev", "graphics"]
categories = ["game-development", "game-engines"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asset = { path = "./r3d-asset" }
asset-loader = { path = "./r3d-asset-loader" }
codegen = { path = "./r3d-codegen" }
logging = { path = "./r3d-logging" }

bitvec = { version = "1" }
colored = { version = "2" }
fontdue = { version = "0.7" }
half = { version = "2", features = ["num-traits", "zerocopy"] }
image = { version = "0.24" }
itertools = { version = "0.11" }
naga = { version = "0.13", features = ["wgsl-in"] }
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
russimp = { version = "2", features = ["prebuilt", "static-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
smartstring = { version = "1" }
specs = { version = "0.19", features = ["derive"] }
thiserror = { version = "1" }
wgpu = { version = "0.17" }
winit = { version = "0.28" }
zerocopy = { version = "0.6" }

[workspace]
members = [
  "./r3d-asset",
  "./r3d-asset-loader",
  "./r3d-asset-pipeline",
  "./r3d-codegen",
  "./r3d-editor",
  "./r3d-logging",
]
