[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro-error = { version ="1" }
proc-macro2 = { version = "1" }
quote = { version = "1" }
syn = { version = "2", features = ["full"] }
