[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = { version = "2" }
itertools = { version = "0.10" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
smartstring = { version = "1" }
thiserror = { version = "1" }
wgpu = { version = "0.16" }
winit = { version = "0.28" }
