[package]
name = "enter-core-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codegen = { path = "../codegen" }
colored = { version = "2" }
half = { version = "2", features = ["num-traits"] }
itertools = { version = "0.10" }
mlua = { version = "0.8", features = ["lua54", "vendored"] }
naga = { version = "0.12", features = ["wgsl-in"] }
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
smartstring = { version = "1" }
thiserror = { version = "1" }
wgpu = { version = "0.16" }
winit = { version = "0.28" }
