[package]
name = "enter-core-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { version = "1" }
codegen = { path = "../codegen" }
colored = { version = "2" }
half = { version = "2", features = ["num-traits", "zerocopy"] }
itertools = { version = "0.11" }
mlua = { version = "0.9", features = ["lua54", "vendored"] }
naga = { version = "0.13", features = ["wgsl-in"] }
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
russimp = { version = "2", features = ["prebuilt", "static-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
smartstring = { version = "1" }
specs = { version = "0.19", features = ["derive"] }
thiserror = { version = "1" }
wgpu = { version = "0.17" }
winit = { version = "0.28" }
zerocopy = { version = "0.6" }
