[package]
name = "asset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1" }
fontdue = { version = "0.7" }
half = { version = "2", features = ["num-traits", "serde", "zerocopy"] }
image = { version = "0.24" }
russimp = { version = "2", features = ["prebuilt", "static-link"] }
serde = { version = "1", features = ["derive"] }
thiserror = { version = "1" }
uuid = { version = "1", features = ["v4", "serde"] }
wgpu = { version = "0.17", features = ["replay", "serde", "trace"] }
zerocopy = { version = "0.6" }
