[package]
name = "logging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
colored = { version = "2" }
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
uuid = { version = "1", features = ["v4"] }
